<resources>
    <string name="app_name">ViewNews</string>
    <string name="author">Author:</string>
    <string name="lunchtime">Lunch time:</string>
    <string name="inputtitle">Please edit the title.</string>
    <string name="inputarticle">Please edit the article.</string>
    <string name="lunch">Lunch</string>
    <string name="logintitle">Login your account</string>
    <string name="inputaccount">Please input your account</string>
    <string name="inputpassword">Please input your password</string>
    <string name="login">Login</string>
    <string name="noaccount">Do not have an account now ?</string>
    <string name="registernow">Register Now !</string>
    <string name="registeraccount">Registe your account</string>
    <string name="confirmpassword">Please input password again</string>
    <string name="register">Register</string>
    <string name="nickname">Nick Name</string>
    <string name="profile">Profile</string>
    <string name="sex">Gender</string>
    <string name="dob">Date of birth</string>
    <string name="signature">Signature</string>
    <string name="editprofile">Edit Profile</string>
    <string name="myarticle">My Article</string>
    <string name="favourite">Favourite</string>
    <string name="cleancache">Clean Cache</string>
    <string name="logout">Log Out</string>
    <string name="feedback">Feedback</string>
    <string name="weather">weather</string>
    <string name="exit">Exit</string>
    <string name="darkmode">Dark/Light Mode</string>
    <string name="report">Report</string>


</resources>